# pillowtalk

./: .gitignore  CMakeLists.txt  MIT-LICENSE  README.md  configure  pillowtalk.spec
examples/: README.md  basic.c  compile.sh
src/: CMakeLists.txt  bsd_queue.h  pillowtalk.h  pillowtalk_changes_feed.c  pillowtalk_impl.c  pillowtalk_impl.h
test/: CMakeLists.txt  test_basic.cpp  test_changes_feed.cpp  test_iterator.cpp  test_json_generator.cpp  test_parser.cpp
test/fixtures/: star_wars.json  star_wars_append.json  star_wars_merged.json
